Added EDMA driver in uboot
New edma3 platform driver added in uboot/drivers
Lib provides set of API to initialize edma, program Param
set register, enable & disable the interrupts, map channel to eventq
and enble & disable event triggers.

The API's & HW registers files are taken from TI DRA7xx starterware
package.

CONFIG_SPL_EDMA_SUPPORT config are used to include
the edma3 lib.

Signed-off-by: vinothkumar <a0131713@ti.com>
Conflicts:
[Minor Resolution]
	arch/arm/cpu/armv7/omap5/hw_data.c
Signed-off-by: Praneeth Bajjuri <praneeth@ti.com>
Change-Id: Icb89a6a12194de5ea61afb519d86a7b5ceb9e6bb

--- a/spl/Makefile
+++ b/spl/Makefile
@@ -77,6 +77,7 @@ LIBS-$(CONFIG_SPL_POWER_SUPPORT) += drivers/power/libpower.o
 LIBS-$(CONFIG_SPL_NAND_SUPPORT) += drivers/mtd/nand/libnand.o
 LIBS-$(CONFIG_SPL_ONENAND_SUPPORT) += drivers/mtd/onenand/libonenand.o
 LIBS-$(CONFIG_SPL_DMA_SUPPORT) += drivers/dma/libdma.o
+LIBS-$(CONFIG_SPL_EDMA_SUPPORT) += drivers/edma/libedma.o
 LIBS-$(CONFIG_SPL_POST_MEM_SUPPORT) += post/drivers/memory.o
 LIBS-$(CONFIG_SPL_NET_SUPPORT) += net/libnet.o
 LIBS-$(CONFIG_SPL_ETH_SUPPORT) += drivers/net/libnet.o
