fastboot: Add oem command support
Taken from http://patchwork.ozlabs.org/patch/388084/ and then
modified to take only the oem support, as flash support was
already taken from mainline patches.

Change-Id: I018ce4dc23b4d5186b65b0e801173ede04ee2a68
Signed-off-by: Angela Stegmaier <angelabaker@ti.com>

--- a/disk/Makefile
+++ b/disk/Makefile
@@ -13,3 +13,7 @@ obj-$(CONFIG_DOS_PARTITION)   += part_dos.o
 obj-$(CONFIG_ISO_PARTITION)   += part_iso.o
 obj-$(CONFIG_AMIGA_PARTITION) += part_amiga.o
 obj-$(CONFIG_EFI_PARTITION)   += part_efi.o
+
+ifdef CONFIG_FASTBOOT_FLASH_MMC_DEV
+obj-y += part_fastboot.o
+endif
