dra7xx_evm: Include IPU2 early boot feature
- Look for IPU2 image on MMC/SD in the partition containing MLO.
  If IPU2 image is found
      - Read image into predefined memory location.
      - Configure IOMMU from IPU2 image resource table.
      - Enable MMU IRQ's.
      - Parse the IPU ELF image and load into memory.
      - Release IPU from reset

Currently only IPU2 loading from MMC is supported. The patch has been
tested successfully with RPMsg test application and MessageQ test
application.

This patch requires corresponding changes in the kernel.

Change-Id: Ide7a22e1d5f3e7f41dfa11351e25bb32759906a0
Signed-off-by: Venkateswara Rao Mandela <venkat.mandela@ti.com>

--- a/common/Makefile
+++ b/common/Makefile
@@ -219,6 +219,7 @@ ifdef CONFIG_SPL_BUILD
 obj-$(CONFIG_ENV_IS_IN_FLASH) += env_flash.o
 obj-$(CONFIG_SPL_YMODEM_SUPPORT) += xyzModem.o
 obj-$(CONFIG_SPL_NET_SUPPORT) += miiphyutil.o
+obj-$(CONFIG_CMD_ELF) += cmd_elf.o
 ifdef CONFIG_SPL_USB_HOST_SUPPORT
 obj-$(CONFIG_SPL_USB_SUPPORT) += usb.o usb_hub.o
 obj-$(CONFIG_USB_STORAGE) += usb_storage.o
@@ -264,5 +265,9 @@ obj-$(CONFIG_FIT_SIGNATURE) += image-sig.o
 obj-$(CONFIG_IO_TRACE) += iotrace.o
 obj-y += memsize.o
 obj-y += stdio.o
+
+ifdef CONFIG_LATE_ATTACH_BOOTIPU2
+obj-y += elf_remoteproc.o
+endif
 
 CFLAGS_env_embedded.o := -Wa,--no-warn -DENV_CRC=$(shell tools/envcrc 2>/dev/null)
